dataset1235/2025-2/2868285114/users/1182455195/executions/3649835072_3921830315.log
== SUBMISSION (2025-08-19 14:34:21)
-- CODE: 
qtd = float(input())
totals = (qtd*2.86) + 50.00
totalsc = totals+totals*(34/100)
print(round(totalc,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(totalc,2))
                ^^^^^^
NameError: name 'totalc' is not defined. Did you mean: 'totals'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(totalc,2))
                ^^^^^^
NameError: name 'totalc' is not defined. Did you mean: 'totals'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(totalc,2))
                ^^^^^^
NameError: name 'totalc' is not defined. Did you mean: 'totals'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(totalc,2))
                ^^^^^^
NameError: name 'totalc' is not defined. Did you mean: 'totals'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(totalc,2))
                ^^^^^^
NameError: name 'totalc' is not defined. Did you mean: 'totals'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(totalc,2))
                ^^^^^^
NameError: name 'totalc' is not defined. Did you mean: 'totals'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 14:34:19)
-- CODE: 
qtd = float(input())
totals = (qtd*2.86) + 50.00
totalsc = totals+totals*(34/100)
print(round(totalc,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(totalc,2))
                ^^^^^^
NameError: name 'totalc' is not defined. Did you mean: 'totals'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(totalc,2))
                ^^^^^^
NameError: name 'totalc' is not defined. Did you mean: 'totals'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(totalc,2))
                ^^^^^^
NameError: name 'totalc' is not defined. Did you mean: 'totals'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(totalc,2))
                ^^^^^^
NameError: name 'totalc' is not defined. Did you mean: 'totals'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(totalc,2))
                ^^^^^^
NameError: name 'totalc' is not defined. Did you mean: 'totals'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(totalc,2))
                ^^^^^^
NameError: name 'totalc' is not defined. Did you mean: 'totals'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 14:34:41)
-- CODE: 
qtd = float(input())
totals = (qtd*2.86) + 50.00
totalc = totals+totals*(34/100)
print(round(totalc,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
230.57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
